# dreamer

./: README.md  pyproject.toml
.github/workflows/: publish.yml
dreamer/api/: __init__.py  audit.py  auth.py  capabilities.py  compat.py  config.py  contexts.py  dream.py  errors.py  hooks.py  jobs.py  rate_limit.py  runtime_state.py  secrets.py  stores.py  tenants.py  triggers.py  types.py  usage.py
dreamer/cli/: main.py
dreamer/contrib/audit/: __init__.py  log.py
dreamer/contrib/context/: fanout.py  markdown.py
dreamer/contrib/dream/: __init__.py  _docker.py  _local.py  claude_agent.py  serializers.py
dreamer/contrib/gates/: __init__.py  budget.py  empty.py
dreamer/contrib/hooks/: __init__.py  git.py  log.py
dreamer/contrib/jobs/: inproc.py
dreamer/contrib/ltm/: markdown.py
dreamer/contrib/mcp_tools/: feedback.py
dreamer/contrib/rate_limit/: __init__.py  noop.py
dreamer/contrib/secrets/: __init__.py  env.py
dreamer/contrib/stm/: sqlite.py
dreamer/contrib/tenancy/: single.py
dreamer/contrib/tenants/: static.py
dreamer/contrib/triggers/: cron.py  (+3 more)
dreamer/server/: app.py  bootstrap.py  compliance.py  control.py  mcp_app.py  orchestrator.py  runtime.py  secret_watcher.py  sinks.py
dreamer/testing/: __init__.py  fakes.py
tests/conformance/: test_fakes.py  test_markdown.py  test_sqlite.py
tests/integration/: test_cli.py  test_end_to_end.py  test_feedback_tools.py  test_orchestrator.py  test_server.py  test_tenant_lifecycle.py  test_triggers.py
tests/unit/: test_claude_agent_engine.py  test_cli.py  test_compat.py  test_compliance.py  test_config.py  test_contexts.py  test_control.py  test_default_gates.py  test_default_sinks.py  test_dream_serializers.py  test_fanout_context.py  test_git_commit_hook.py  test_github_pr_hook.py  test_log_hook.py  test_markdown_context.py  test_markdown_ltm.py  test_runtime.py  test_simple_token_auth.py  test_single_tenant.py  test_smoke.py  test_static_tenants.py  test_tenants.py  test_types.py
(+11 files in other folders)
